--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,11 +1,6 @@
-IPC:
- - convert dst path to absolute path (maybe do it in main)
- - removal of PID file should be done by ipc watch app
- - removal of PID file should happen if main app is closed
 
  main:
-  - one should do smart_folder_create (that validates the parameters) beforecalling IPC_watch and smart_folder_start
-  - remove IPC watch if smart_folder_start fails
+  - convert dst path and search path to absolute path
 
 GLOBAL:
   - set create permissions globally (UMASK?) for all file/dir creation
@@ -13,3 +8,5 @@ GLOBAL:
   - ask teacher about usage of C lib functions instead of system functions.
      - opendir vs open & getdents
      - fopen vs open,etc
+  - test malloc res for failure
+  - add module prefix in private functions?
