--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,10 +1,13 @@
 
 main:
   - convert dst path and search path to absolute path
-     - throw exception if abs path>MAX_PATH
+    - throw exception if abs path>MAX_PATH
 
 path_utils
- - module for path operations
+  - module for path operations
+
+finder
+  - realloc when needed instead of 1000000 files
  
 GLOBAL:
   - set create permissions globally (UMASK?) for all file/dir creation
@@ -16,3 +19,9 @@ GLOBAL:
   - add module prefix in private functions?
   - perror(), right parameter?
   - test with VALGRIND
+
+Modules to implement:
+  - File linker
+  - file_validator (noeuds: &, ||, leafs: test_name, test_date, test_size, test_etc)
+  - deamonize
+
