--- a/report/report.tex
+++ b/report/report.tex
@@ -84,10 +84,15 @@ Ce mode prend 3 paramètres:
 \end{itemize}
 
 \textit{<dir\_name>} et \textit{<search\_path>} sont de simples chemin vers des dossiers.
-Concernant \textit{[expression]}, ceci correspond à une liste de critères dont l'interface est identique à celle de \textit{find}.
+Concernant \textit{[expression]}, ceci correspond à une liste de critères dont l'interface est un sens-ensemble à celle de \textit{find}.
 
 \paragraphnl{Expression}
-...
+Comme dit précédemment, l'interface est semblable à celle de \href{https://linux.die.net/man/1/find}{find}.
+Voici la liste des options pris en charge:
+
+\begin{itemize}
+    \item \textit{...}: ...;
+\end{itemize}
 
 \subsubsection{Mode stop}
 Le deuxième est le mode \textit{stop}.
