--- a/report/report.tex
+++ b/report/report.tex
@@ -72,11 +72,10 @@ pour chacun des fichiers trouvés, le programme crée un lien symbolique dans un
 Ce programme possède deux modes de fonctionnement.
 
 \subsubsection{Mode recherche}
-Le premier est le mode \textit{recherche}.
 C'est le mode par défaut et simule le SmartFolder sur MacOSX. \\
 
-Dans ce mode, le programme tourne en arrière-plan et maintient dans le dossier de destination une liste de liens vers les fichier trouvés correpondant au criteres de recherche choisis.
-Cette liste est dynamique et mise à jour si des nouveaux fichiers répondent aux criteres de recherche ou, si au contraire, des fichiers ne répondent plus à ces criteres. \\
+Dans ce mode, le programme tourne en arrière-plan et maintient dans le dossier de destination une liste de liens vers les fichier trouvés correpondant aux critères de recherche choisis.
+Cette liste est dynamique et mise à jour si des nouveaux fichiers répondent aux critères de recherche ou, si au contraire, des fichiers ne répondent plus à ces critères. \\
 
 La recherche de fichiers est recursive et suit les liens symboliques.
 
@@ -84,57 +83,70 @@ Par ailleurs, les fichiers en double ne doivent pas apparaître et les fichiers 
 
 Ce mode prend 3 paramètres:
 \begin{itemize}
-    \item \textit{<dir\_name>}: chemin où stocker les liens;
+    \item \textit{<dir\_name>}: chemin (de destination) où stocker les liens;
     \item \textit{<search\_path>}: chemin de recherche;
     \item \textit{<expression>}: critères de sélection. \\
 \end{itemize}
 
 \textit{<dir\_name>} et \textit{<search\_path>} sont de simples chemins vers des dossiers.\\
-\textit{<expression>} correspond à une liste de critères dont l'interface est un sous-ensemble à celle de \textit{find}.
-
-\newpage
+\textit{<expression>} correspond à une liste de critères dont l'interface est un sous-ensemble de celle de \textit{find}.
 
 \paragraphnl{Expression}
 Comme dit précédemment, l'interface est semblable à celle de \textit{find}\footnote{\url{https://linux.die.net/man/1/find}}.
 Voici la liste des options pris en charge:\\
 
 
-\textbf{Criteres:} (TODO: space text below items correctly)
+Criteres:
 \begin{itemize}
+	\renewcommand\labelitemi{}
 	\renewcommand\labelitemii{}
-    \item \textit{-name}: \underline{fname}\\
-	   	Le nom de fichier est exactement \underline{fname}\\
-	   	Example, les fichiers només contenant "todo.txt": \textit{-name todo.txt}
-    \item \textit{-name}: -\underline{fname} \\
-    Le nom de fichier contient \underline{fname}.\\
-    Example, les fichiers contenant ".txt";:
+	\renewcommand\labelitemiii{}
+    \item \textit{-name}: \underline{fname}
+	\begin{itemize}
+		\item Le nom de fichier est exactement \underline{fname}
+		\item Example, les fichiers només  "todo.txt": \textit{-name todo.txt}
+	\end{itemize}
+    \item \textit{-name}: -\underline{fname} 
+	\begin{itemize}
+    \item     Le nom de fichier contient \underline{fname}.
+    \item     Example, les fichiers contenant ".txt":
     \textit{-name -.txt}
-	\item \textit{-group}: \underline{gname}\\
-	   	Le fichier appartient au group \underline{gname}\\
-	   	Example, les fichiers appartenant au group \textit{root}: \textit{-group root}
-	\item \textit{-user}: \underline{uname}\\
-		Le fichier est possédé par utilisateur \underline{uname} \\
-	   	Example, les fichiers possédés par l'utilisateur \textit{claudio}: \textit{-user claudio}
-	\item \textit{-perm}: \underline{perm}\\
-		Le fichier permissions sont exactement \underline{perm}\\
-		Example, les fichiers ayant exactement les permissions 644: \textit{-perm 644}
-	\item \textit{-perm}: -\underline{perm}\\
-		Le fichier a au moins les permissions \underline{perm}\\
-		Example, les fichiers dont l'utilisateur peut lire et executer: \textit{-perm -300}
-	\item \textit{-size}: \underline{[+-]size[GMkc]}\\
-		Le fichier a la taille \underline{size}.
-		Les suffix indiquent les unités utilisée:
+	\end{itemize}
+	\item \textit{-group}: \underline{gname}
+	\begin{itemize}
+    \item 	   	Le fichier appartient au group \underline{gname}
+    \item 	   	Example, les fichiers appartenant au group \textit{root}: \textit{-group root}
+\end{itemize}
+\item \textit{-user}: \underline{uname}
+	\begin{itemize}
+    \item 		Le fichier est possédé par utilisateur \underline{uname} 
+    \item 	   	Example, les fichiers possédés par l'utilisateur \textit{claudio}: \textit{-user claudio}
+	\end{itemize}
+	\item \textit{-perm}: \underline{perm}
+	\begin{itemize}
+    \item 		Les permissions sont exactement \underline{perm}
+    \item 		Example, les fichiers ayant exactement les permissions 644: \textit{-perm 644}
+	\end{itemize}
+	\item \textit{-perm}: -\underline{perm}
+	\begin{itemize}
+    \item 		Le fichier a au moins les permissions \underline{perm}
+    \item 		Example, les fichiers dont l'utilisateur peut lire et executer: \textit{-perm -500}
+	\end{itemize}
+	\item \textit{-size}: \underline{[+-]size[GMkc]}
+	\begin{itemize}
+    \item 		Le fichier a la taille \underline{size}.
+    \item 		Le suffix indique l'unité utilisée:
 		\begin{itemize}
 			\item \textit{'c'}: bytes
 			\item \textit{'k'}: Kilobytes
 			\item \textit{'M'}: Megabytes
 			\item \textit{'G'}: Gigabytes
 		\end{itemize}
-		Les préfixes indiquent la comparaison utilisée:
+		Le préfixe indique la comparaison utilisée:
 		\begin{itemize}
 			\item \textit{'+'}: supérieur à
 			\item \textit{'-'}: inférieur à
-			\item \textit{' '}: exactement
+			\item \textit{''}: exactement
 		\end{itemize}
 		Examples:
 		\begin{itemize}
@@ -142,45 +154,54 @@ Voici la liste des options pris en charge:\\
 			\item \textit{-size -30k}: fichiers de taille inférieure à 30KB
 			\item \textit{-size +2M}: fichiers de taille supérieure à 2MB
 		\end{itemize}
-	\item \textit{-atime}: \underline{[+-]time[md]}\\
-	Le fichier fut accédé depuis \underline{time}.
-	Les suffix indiquent les unités utilisée:
+	\end{itemize}
+	\item \textit{-atime}: \underline{[+-]time[md]}
+	\begin{itemize}
+\item	Le fichier fut accédé depuis \underline{time}. La référence de temps est le moment présent.
+\item	Le suffix indique l'unité utilisée:
 	\begin{itemize}
 		\item \textit{'m'}: minutes
 		\item \textit{'d'}: jours 
 	\end{itemize}
-	Les préfixes \textit{[+-]} indiquent la comparaison utilisée, comme pour le critère \underline{-size} ci-dessus.\\
+	Le préfixe \textit{[+-]} indique la comparaison utilisée, comme pour le critère \underline{-size} ci-dessus.\\
 	Examples:
 	\begin{itemize}
 		\item \textit{-atime +5m}: fichiers accédés depuis plus de 5 minutes
 		\item \textit{-atime -1d}: fichiers accédés dans les dernières 24 heures
 	\end{itemize}
-	\item \textit{-ctime}: \underline{[+-]time[md]}\\
-	Le status du fichier fut changé depuis \underline{time}. Pour plus détails, voir l'explication pour le critère \underline{-atime}
-	\item \textit{-mtime}: \underline{[+-]time[md]}\\
-		Le fichier fut changé depuis \underline{time}. Pour plus détails, voir l'explication pour le critère \underline{-atime}\\		
+	\end{itemize}
+	\item \textit{-ctime}: \underline{[+-]time[md]}
+\begin{itemize}
+	\item 	Le status du fichier fut changé depuis \underline{time}. 
+	\item Pour plus détails, voir l'explication pour le critère \underline{-atime}
+	\end{itemize}
+	\item \textit{-mtime}: \underline{[+-]time[md]}
+\begin{itemize}
+	\item 	Le fichier fut changé depuis \underline{time}.\\
+	 Pour plus détails, voir l'explication pour le critère \underline{-atime}	\\	
+	\end{itemize}
 \end{itemize}
 
 
-Les differents critères de tests enumérés ci-dessus peuvent être combinés avec les opérateurs listés ci-dessous, énuméés dans l'odre de précédence décroissante:\\
-\textbf{Operateurs:}
+Les differents critères enumérés ci-dessus peuvent être combinés avec les opérateurs listés ci-dessous, énumérés dans l'odre de précédence décroissante:\\
+
+Opérateurs:
 \begin{itemize}
 	\renewcommand\labelitemi{}
-	\item \textit{( critere )}:force la précédence de l'expressions entre paranthèses
+	\item \textit{( critère )}: force la précédence de l'expression entre paranthèses
 	\item \textit{-not}: applique le \textit{NOT} logique  au critère de droite
-	\item \textit{-and}: applique le \textit{AND} logique entre le critères à gauche et à droite de l'operateur. 
-	\item \textit{-or}: applique le \textit{OR} logique  entre les critères à gauche et à droite de l'operateur. 
+	\item \textit{-and}: applique le \textit{AND} logique entre le critères à gauche et à droite de l'opérateur
+	\item \textit{-or}: applique le \textit{OR} logique  entre les critères à gauche et à droite de l'opérateur
 \end{itemize}
 
 
 \subsubsection{Mode stop}
-Le deuxième est le mode \textit{stop}.
-Il permet d'arrêter une recherche en cours. \\
+Le mode \textit{stop} permet d'arrêter une recherche en cours. \\
 
-Ce mode prend 1 paramètre:
+Ce mode prend en paramètre:
 \begin{itemize}
 	\renewcommand\labelitemi{}
-    \item \textit{-d} \textit{<dir\_name>}: termine le SmatFolder pour le chemin specifié.
+    \item \textit{-d} \textit{<dir\_name>}: termine le SmatFolder pour le chemin de destination specifié.
 \end{itemize}
 
 \newpage
@@ -196,6 +217,8 @@ Ce mode prend 1 paramètre:
     \caption{Architecture du SmartFolder}
     \label{Architecture du SmartFolder}
 \end{figure}
+
+\newpage
 
 \subsubsection{Main}
 
@@ -235,13 +258,13 @@ Ce module vérifie si un fichier est valide selon l'expression créée par le mo
 \subsubsection{Finder}
 Ce module est responsable de produire la liste de tous les fichiers du dossier de recherche respectant les criteres de recherche.
 
-La vérification des fichiers contre les critères est deleguée au module \textit{Validator}.\\
+La vérification des fichiers contre les critères est déleguée au module \textit{Validator}.\\
 
 Lors du processus de recherche effectué au sein de ce module, un parcours d'arborescence est effectué recursivement et les liens symboliques sont suivis.
 
 Des boucles deviennent alors possibles. Ce module doit donc gérer ce cas spécifique et prévenir les boucles infinies ainsi que le traitement des fichiers et dossiers dupliqués. \\
 
-Possibilité d'implémentation: utilisation d'une hashtable contenant les noeuds d'index (inodes) des fichiers et répertoires déjà parcourus.
+Possibilité d'implémentation: utilisation d'une table de hashage contenant les numéros d'inode des fichiers et répertoires déjà parcourus.
 
 \subsubsection{Linker}
 Le module \textit{Linker} a pour rôle de mettre à jour le dossier de destination
@@ -256,7 +279,7 @@ En effet, lorsqu'une instance de \textit{SmartFolder} souhaite arrêter une autr
 il faut d'une manière ou d'une autre permettre une communication simple entre les deux processus afin
 qu'une instance puisse signaler un arrêt à une autre instance. \\
 
-Le moyen de communication choisi a été les signaux POSIX, le signal \textit{SIGTERM} pour être plus précis.
+Le moyen de communication choisi est les signaux POSIX, le signal \textit{SIGTERM} pour être plus précis.
 Une instance qui veut donc signaler l'arrêt doit envoyer le signal cité au processus concerné. \\
 
 Afin de pouvoir lancer un signal, il faut que le PID du processus cible soit connu.
